[gd_scene load_steps=16 format=3 uid="uid://c6jh6msybtei3"]

[ext_resource type="Script" path="res://scripts/boss.gd" id="1_t4phl"]
[ext_resource type="Texture2D" uid="uid://c5nkkivllqep4" path="res://assets/sprites/CreepyBoss.png" id="2_eehld"]
[ext_resource type="Texture2D" uid="uid://bojka6ugl1cgk" path="res://assets/sprites/CreepyBossEye.png" id="3_jcj2n"]
[ext_resource type="AudioStream" uid="uid://dkj3canxjat8a" path="res://scenes/BossShoot.wav" id="4_2jed7"]
[ext_resource type="AudioStream" uid="uid://bjei0q67axvjw" path="res://assets/music/BossMusicIntro.wav" id="6_djfnr"]
[ext_resource type="Script" path="res://scenes/BossHealthBar.gd" id="7_gnca4"]
[ext_resource type="AudioStream" uid="uid://dhntp3noecs26" path="res://assets/music/BossMusicContinuous.wav" id="7_kygdj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vridx"]
radius = 16.2247

[sub_resource type="AtlasTexture" id="AtlasTexture_asu1r"]
atlas = ExtResource("2_eehld")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv1m3"]
atlas = ExtResource("2_eehld")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sng4"]
atlas = ExtResource("2_eehld")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_r4j0y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_asu1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv1m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sng4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv1m3")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bbuhi"]
radius = 9.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3p2dd"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u6vkk"]
bg_color = Color(0.462142, 0.0488807, 0.129545, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="FlyingEnemy" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_t4phl")

[node name="EnemyHitBoxLMB" type="Area2D" parent="."]
position = Vector2(0, 8)
collision_layer = 4
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitBoxLMB"]
position = Vector2(1.19209e-07, -13.2353)
shape = SubResource("CircleShape2D_vridx")

[node name="EnemyHitBoxLMBPersistent" type="Area2D" parent="."]
position = Vector2(0, 8)
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitBoxLMBPersistent"]
position = Vector2(1.19209e-07, -13.2353)
shape = SubResource("CircleShape2D_vridx")

[node name="EnemyHitBoxRMB" type="Area2D" parent="."]
position = Vector2(0, 8)
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitBoxRMB"]
position = Vector2(1.19209e-07, -13.2353)
shape = SubResource("CircleShape2D_vridx")

[node name="EnemyHitBoxRMBPersistent" type="Area2D" parent="."]
position = Vector2(0, 8)
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitBoxRMBPersistent"]
position = Vector2(1.19209e-07, -13.2353)
shape = SubResource("CircleShape2D_vridx")

[node name="BodyAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r4j0y")
animation = &"new_animation"
autoplay = "new_animation"
frame_progress = 0.266911

[node name="EyeShoot" type="Node2D" parent="."]

[node name="Eye" type="Sprite2D" parent="EyeShoot"]
position = Vector2(0, 1)
texture = ExtResource("3_jcj2n")

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_2jed7")
volume_db = 21.895
bus = &"SFX"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_bbuhi")

[node name="introMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_djfnr")
volume_db = 12.164
autoplay = true
bus = &"Music"

[node name="ContinuousMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_kygdj")
volume_db = 12.164
bus = &"Music"

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -93.0
offset_top = -27.0
offset_right = 93.0
theme_override_styles/background = SubResource("StyleBoxFlat_3p2dd")
theme_override_styles/fill = SubResource("StyleBoxFlat_u6vkk")
max_value = 250.0
step = 1.0
value = 250.0
show_percentage = false
script = ExtResource("7_gnca4")

[connection signal="body_entered" from="EnemyHitBoxLMB" to="." method="_on_enemy_hit_box_lmb_body_entered"]
[connection signal="body_entered" from="EnemyHitBoxLMBPersistent" to="." method="_on_enemy_hit_box_lmb_persistent_body_entered"]
[connection signal="body_entered" from="EnemyHitBoxRMB" to="." method="_on_enemy_hit_box_rmb_body_entered"]
[connection signal="body_entered" from="EnemyHitBoxRMBPersistent" to="." method="_on_enemy_hit_box_rmb_persistent_body_entered"]
